# multipass-orchestrator

./: .gitignore  README.md  requirements.txt  setup.cfg
multipass_orchestrator/: delete.py  deploy.py  destroy.py  orchestrator.py
tests/: build.sh  cloud-config.yaml  id_rsa  id_rsa.pub  run.sh  simple.yaml  test-environment.yaml
