[metadata]
name             = multipass_orchestrator
version          = 0.1.0
summary          = UNOFFICIAL Orchestrator for Multipass
description-file = README.md
author           = Horst Dumcke
home-page        = https://github.com/hdumcke

[files]
packages         = multipass_orchestrator

[global]
setup-hooks      = pbr.hooks.setup_hook

[options]
include_package_data = False

[entry_points]
console_scripts =
    mpo-deploy = multipass_orchestrator.deploy:main
    mpo-destroy = multipass_orchestrator.destroy:main

[wheel]
universal       = 1
